# 2019-test-ppq-pk

./: .Rhistory  .gitignore  CMakeLists.txt  README.md  art-lum.CODE1.nonmem  art-lum.CODE2.nonmem  general_functions.cpp  general_functions.h  globals.cpp  globals.h  main copy.cpp  main.cpp  main_dha_ppq.cpp  main_original.cpp  makefile  out  out.day28.N3000.pmf1p5.csv  out.dha.allpatients.csv  out.lum.allpatients.20240330.age3.14kg.csv  out.lum.allpatients.v20240328.csv  out.ppq.allpatients.csv  out.ppq.allpatients.v20191108.csv  out.ppq.allpatients.v20191109.csv  out.ppq.allpatients.v20191110.csv  out.ppq.allpatients.v20240318.csv  pk_plots.ipynb  pkdynamics_ppq.cpp  pkdynamics_ppq.h  pkpd_adq.cpp  pkpd_adq.h  pkpd_artemether.cpp  pkpd_artemether.h  pkpd_artemether_onyamboko.h  pkpd_artesunate.cpp  pkpd_artesunate.h  pkpd_dha.cpp  pkpd_dha.h  pkpd_lum _onyamboko.cpp  pkpd_lum.cpp  pkpd_lum.h  (+4 more)
Matlab/: myPlot.m
NONMEM_files/: model.details.fromJoelAndRichard.txt  model.details.fromJoelAndRichard.v2.txt
lit/lum-plosmed-paper/: .~lock.pmed.1002579.s009.docx#  pmed.1002579.s001.docx  pmed.1002579.s002.tif  pmed.1002579.s003.tif  pmed.1002579.s004.eps  pmed.1002579.s006.tif  pmed.1002579.s007.docx  pmed.1002579.s008.docx  pmed.1002579.s009.docx
notes/: artemether_parameters.ipynb  main_practice.cpp  pkpd_artemether_cpp_notes.md  pkpd_artemether_practice.cpp  pkpd_artemether_practice.h
old_files/: cpp-pkpd-falciparum.sublime-workspace  makefile  out.lum.allpatients.20240330.age10.30kg.csv  out.lum.allpatients.20240330.age25.42kg.csv  out.ppq.allpatients.v20191109.csv  out2  pk_plots.ipynb  pkpd_dha.r  pkpd_ppq.r  simple_out
pkpd_model_backup/04112025_backup/: main.cpp  pkpd_artemether.h  (+2 more)
pkpd_simulation_functions_python/: prepare_pkpd_parameters.py  run_pkpd_MLE.py  run_pkpd_simulation.py
plots/: .gitattributes  matplotlib_quick_start_guide.ipynb  pkpd_AL_weight_calibration_02.csv  pkpd_AL_weight_calibration_02.pyobj  scripts.ipynb
python_test_build/: pkpd_artemether.py
study_notes/: general_functions_practice.cpp  general_functions_practice.h  pkpd_artemether_cpp_notes.md  pkpd_artemether_header_notes.md  pkpd_artemether_practice.cpp  pkpd_artemether_practice.h
test/: main.cpp  pkpd_adq.cpp  pkpd_dha.cpp  pkpd_dha.h  pkpd_dha.py  pkpd_lum.cpp  pkpd_lum.h
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
(+690 files in other folders)
